# gaen-wearable

./: Kconfig.gaen  README.md  techstack.md  techstack.yml  west.yml
gaen-wearable/: CMakeLists.txt  prj.conf
gaen-wearable/src/: ct.h  ct_app_en.c  ct_app_en.h  ct_app_enc.c  ct_app_enc.h  ct_app_state.h  ct_crypto.c  ct_crypto.h  ct_db.c  ct_db.h  ct_settings.c  ct_settings.h  main.c
gaen-wearable/src/bluetooth/: basa.c  basa.h  ctsa.c  ctsa.h  disa.c  disa.h
gaen-wearable/src/tinycrypt/: hkdf.c  hkdf.h
gaen-wearable/src/util/: battery.c  battery.h  reboot.c  ui.c  ui.h
zephyr/: module.yml
